css/main.css
/* ... */
.hero__title {
  margin-bottom: 12px;
  font-size: 68px;
  line-height: 1;
  color: var(--heading-font-color);
}

@media (width <= 1400px) {
  .hero__title {
    font-size: 56px;
  }
}

@media (width <= 768px) {
  .hero__title {
    font-size: 48px;
  }
}

@media (width <= 576px) {
  .hero__title {
    margin-bottom: 8px;
    font-size: 32px;
  }
}
.hero__subtitle {
  margin-bottom: 24px;
  font-family: Poppins, "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 20px;
  font-weight: 500;
  color: var(--text-color);
}

@media (width <= 576px) {
  .hero__subtitle {
    margin-bottom: 20px;
    font-size: 18px;
  }
}
.hero__description {
  margin-bottom: 16px;
}
.hero__description p {
  margin-bottom: 16px;
}
.hero__description a:not([class]) {
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  color: var(--heading-font-color);
}
.hero__description a:not([class]):hover {
  color: var(--primary-color);
}

@media (width <= 576px) {
  .hero__description {
    font-size: 16px;
  }
  .hero__description p {
    margin-bottom: 12px;
  }
}
.hero__button {
  margin-top: 16px;
}

@media (width <= 576px) {
  .hero__button {
    margin-top: 8px;
  }
}

@media (width <= 1024px) {
  .hero__left {
    margin-top: 40px;
  }
}
.hero__image {
  position: relative;
  transform: translate(0);
  width: 100%;
  height: 634px;
  border-radius: 16px;
  overflow: hidden;
  box-shadow: 0 10px 30px rgb(0 0 0 / 2%);
  background: var(--background-color);
  user-select: none;
}
.hero__image img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

@media (width <= 1024px) {
  .hero__image {
    height: auto;
    aspect-ratio: 4/3;
  }

  @supports not (aspect-ratio: 4 / 3) {
    .hero__image {
      height: 0;
      padding-bottom: 75%;
    }
  }
}
.hero__image__caption {
  margin-top: 12px;
  font-family: Poppins, "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 14px;
  line-height: 1.4;
  text-align: center;
  color: var(--text-alt-color);
}
.hero__image__caption a:not([class]) {
  text-decoration: underline;
  text-underline-offset: 2px;
}
.logos-title {
  margin-bottom: 0;
  font-size: 32px;
  text-align: center;
}

@media (width <= 576px) {
  .logos-title {
    font-size: 24px;
  }
}
.logos {
  max-width: 680px;
  margin: 0 auto;
  margin-top: 24px;
  will-change: transform;
  overflow: hidden;
  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
  background: var(--background-color);
}
.logos .logos__inner {
  width: max-content;
  display: flex;
  flex-wrap: nowrap;
}
.logos .logos__image {
  position: relative;
  max-width: 100%;
  height: 140px;
  border-radius: 8px;
  overflow: hidden;
  user-select: none;
}
.logos .logos__image img {
  height: 100%;
  object-fit: cover;
}
.logos .splide__sr {
  display: none;
}

@media (width <= 768px) {
  .logos {
    max-width: 100%;
  }
  .logos .logos__image {
    height: 100px;
  }
}
.blog__view {
  padding-left: 20px;
  border-radius: 12px;
  background: var(--background-color);
}
.blog__toggle {
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: 48px;
  height: 48px;
  padding: 12px;
  border-radius: 12px;
  background: var(--background-alt-color);
  transition: transform 0.15s ease;
  cursor: pointer;
}

@media (width <= 768px) {
  .blog__toggle {
    display: none;
  }
}
.dark-mode .blog__toggle {
  background: var(--background-alt-color-2);
}
.icon-bar {
  position: relative;
  width: 4px;
  height: 4px;
  margin: 0 auto 4px;
  transition: all 0.15s ease;
  background: var(--heading-font-color);
}
.icon-bar:last-child {
  margin-bottom: 0;
}
.icon-bar::before,
.icon-bar::after {
  content: "";
  position: absolute;
  display: block;
  width: 4px;
  height: 4px;
  background: var(--heading-font-color);
  opacity: 1;
  will-change: transform;
  transition: all 0.15s ease;
}
.icon-bar::before {
  left: 0;
  transform: translateX(-9px);
}
.icon-bar::after {
  right: 0;
  transform: translateX(9px);
}
.view-list .icon-bar {
  width: 24px;
}
.view-list .icon-bar::before,
.view-list .icon-bar::after {
  opacity: 0;
}
.view-list .icon-bar::before {
  left: 0;
  transform: translateX(-15px);
}
.view-list .icon-bar::after {
  right: 0;
  transform: translateX(15px);
}
.pagination {
  text-align: center;
}

.tags .pagination {
  text-align: center;
}

.tags .load-more-section {
  margin: 0 auto;
  max-width: 200px;
}

@media (width <= 1024px) {
  .sidebar {
    margin-top: 80px;
  }
}

@media (width <= 576px) {
  .sidebar {
    margin-top: 60px;
  }
}
.widget {
  margin-bottom: 32px;
}
.widget:last-child {
  margin-bottom: 0;
}
.widget-sidebar-head {
  position: relative;
  display: flex;
  align-items: center;
  margin-bottom: 24px;
}
.widget-sidebar-head::after {
  content: "";
  position: absolute;
  z-index: -1;
  display: block;
  width: 100%;
  height: 1px;
  background: var(--border-color);
  pointer-events: none;
}
.widget-sidebar-head .widget-sidebar-title {
  padding-right: 16px;
  margin-bottom: 0;
  font-size: 18px;
  font-weight: 600;
  background: var(--background-color);
}
.widget-subscribe {
  position: relative;
  padding: 32px;
  border-radius: 16px;
  overflow: hidden;
  background: var(--gradient-color);
}
.widget-subscribe .widget-subscribe__content {
  color: var(--white);
}
.widget-subscribe .widget-subscribe__content .widget-subscribe__title {
  margin-bottom: 8px;
  font-size: 28px;
  color: var(--white);
}
.widget-subscribe .widget-subscribe__content .widget-subscribe__description {
  margin-bottom: 24px;
  font-size: 15px;
}
.widget-subscribe .widget-subscribe__form .widget-subscribe__email {
  width: 100%;
  padding: 18px 24px;
  margin-bottom: 16px;
  font-size: 16px;
  outline: none;
  border: 1.4px solid rgb(255 255 255 / 30%);
  border-radius: 12px;
  color: var(--white);
  background: rgb(255 255 255 / 30%);
}
/* ... */

